force-app/main/default/objects/Condition_Update__c.object
<CustomObject>
    <label>Condition Update</label>
    <nameField>
        <displayFormat>Condition Update - {0000}</displayFormat>
        <label>Condition Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>