force-app/main/default/objects/Condition_Update__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Condition Updates</relationshipLabel>
    <relationshipName>Condition_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>