force-app/main/default/objects/Condition_Update__c/fields/Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address__c</fullName>
    <label>Branch Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>