force-app/main/default/objects/Condition_Update__c/fields/Branch_Fax__c.field-meta.xml
<CustomField>
    <fullName>Branch_Fax__c</fullName>
    <label>Branch Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>