force-app/main/default/objects/Condition_Update__c/fields/Branch_Phone__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone__c</fullName>
    <label>Branch Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>