force-app/main/default/objects/Condition_Update__c/fields/Condition_Time__c.field-meta.xml
<CustomField>
    <fullName>Condition_Time__c</fullName>
    <label>Condition Time</label>
    <type>DateTime</type>
</CustomField>