force-app/main/default/objects/Condition_Update__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>