force-app/main/default/objects/Condition_Update__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <label>Contact Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>