force-app/main/default/objects/Condition_Update__c/fields/Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FirstName__c</fullName>
    <label>Contact FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>