force-app/main/default/objects/Condition_Update__c/fields/Lender_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lender_Reference__c</fullName>
    <label>Lender Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>