force-app/main/default/objects/Condition_Update__c/fields/Met_Days__c.field-meta.xml
<CustomField>
    <fullName>Met_Days__c</fullName>
    <label>Met Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>