force-app/main/default/objects/Condition_Update__c/fields/Met_Days_Note__c.field-meta.xml
<CustomField>
    <fullName>Met_Days_Note__c</fullName>
    <label>Met Days Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>