force-app/main/default/objects/Condition_Update__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Condition Updates</relationshipLabel>
    <relationshipName>Condition_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>